<resources>
    <string name="app_name">BitClient</string>
    <string name="authorization_logo_content_description">Logo</string>
    <string name="authorization_enter">Sign in</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="home_title">Home</string>
    <string name="home_work_title">My work</string>
    <string name="home_recent_repos_title">Recent repositories</string>
    <string name="settings_title">Settings</string>
    <string name="workspaces_title">Workspaces</string>
    <string name="change_workspace_label">Change workspace</string>
    <string name="repositories_title">Repositories</string>
    <string name="account_title">Account</string>
    <string name="branches_title">Branches</string>
    <string name="organizations_title">Organizations</string>
    <string name="pull_requests_title">Pull requests</string>
    <string name="repositories_menu">Menu</string>
    <string name="settings_logout">Log out</string>
    <string name="settings_clear_cache">Clear cache</string>
    <string name="repository_icon_private_repo_content_description">Private repository</string>
    <string name="load_error_message">Something went wrong, please try again.</string>
    <string name="load_error_retry">Retry</string>
    <string name="switch_account">Switch account</string>
    <string name="created_on">Created on %1$s</string>
</resources>