<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_navigation_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.bitclient.ui.view.fragments.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_repositoriesFragment"
            app:destination="@id/repositoriesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_organizationsFragment"
            app:destination="@id/organizationsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_pullRequestsFragment"
            app:destination="@id/pullRequestsFragment" />
    </fragment>
    <fragment
        android:id="@+id/repositoriesFragment"
        android:name="com.example.bitclient.ui.view.fragments.RepositoriesFragment"
        android:label="@string/repositories_title"
        tools:layout="@layout/fragment_repositories">
        <argument
            android:name="workspaceId"
            app:argType="string"
            app:nullable="true"/>
        <action
            android:id="@+id/action_repositoriesFragment_to_branchesFragment"
            app:destination="@id/branchesFragment" />
    </fragment>
    <fragment
        android:id="@+id/organizationsFragment"
        android:name="com.example.bitclient.ui.view.fragments.OrganizationsFragment"
        android:label="@string/organizations_title"
        tools:layout="@layout/fragment_organizations">
        <argument
            android:name="accountId"
            app:argType="string"
            app:nullable="true"/>
        <action
            android:id="@+id/action_organizationsFragment_to_repositoriesFragment"
            app:destination="@id/repositoriesFragment"/>
    </fragment>
    <fragment
        android:id="@+id/pullRequestsFragment"
        android:name="com.example.bitclient.ui.view.fragments.PullRequestsFragment"
        android:label="@string/pull_requests_title"
        tools:layout="@layout/fragment_pull_requests">
    </fragment>
    <fragment
        android:id="@+id/branchesFragment"
        android:name="com.example.bitclient.ui.view.fragments.BranchesFragment"
        android:label="@string/branches_title"
        tools:layout="@layout/fragment_branches" >
        <argument
            android:name="workspaceId"
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="repositoryId"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_branchesFragment_to_commitsFragment"
            app:destination="@id/commitsFragment"
            app:popUpTo="@id/branchesFragment"/>
    </fragment>
    <fragment
        android:id="@+id/commitsFragment"
        android:name="com.example.bitclient.ui.view.fragments.CommitsFragment"
        android:label="CommitsFragment"
        tools:layout="@layout/fragment_commits">
        <argument
            android:name="workspaceId"
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="repositoryId"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="branchName"
            app:argType="string"
            app:nullable="true"/>
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.bitclient.ui.view.fragments.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.example.bitclient.ui.view.fragments.AccountFragment"
        android:label="@string/account_title"
        tools:layout="@layout/fragment_account" />
</navigation>
